# vibe-core

./: .travis.yml  CHANGELOG.md  LICENSE.txt  LICENSE_DE.txt  README.md  appveyor.yml  dub.sdl  meson.build  run-ci.sh  travis-ci.sh
.github/workflows/: musl.yml  test.yml
examples/bench-dummy-http-server/source/: app.d
examples/echo-server/: dub.sdl
examples/echo-server/source/: app.d
source/vibe/: meson.build
source/vibe/core/: args.d  channel.d  concurrency.d  connectionpool.d  core.d  file.d  log.d  net.d  package.d  parallelism.d  path.d  process.d  stream.d  sync.d  task.d  taskpool.d
source/vibe/core/internal/: threadlocalwaiter.d
source/vibe/internal/: allocator.d  array.d  async.d  freelistref.d  hashmap.d  interfaceproxy.d  string.d  traits.d
tests/: 0-tcp.d  0-tcpproxy.d  args.sh  issue-110-close-while-waitForData.d  issue-157-consume-closed-channel.d  issue-161-multiple-joiners.d  issue-267-pipe.d  issue-331-tcp-connect-timeout.d  issue-58-task-already-scheduled.d  issue-66-yield-eventloop-exit.d  pull-218-resolvehost-dns-address-family.d  std.concurrency.d  tcp-read-timeout.d  vibe.core.concurrency.1408.d  vibe.core.core.1590.d  vibe.core.core.1742.d  vibe.core.core.refcount.d  vibe.core.file.d  vibe.core.file.gcleak.d  vibe.core.net.1376.d  vibe.core.net.1429.d  vibe.core.net.1441.d  vibe.core.net.1726.d  vibe.core.net.2211.d  vibe.core.process.d  vibe.core.stream.pipe.d
