sources = files(
    'appmain.d',
    'core/args.d',
    'core/channel.d',
    'core/concurrency.d',
    'core/connectionpool.d',
    'core/core.d',
    'core/file.d',
    'core/internal/release.d',
    'core/log.d',
    'core/net.d',
    'core/parallelism.d',
    'core/path.d',
    'core/process.d',
    'core/stream.d',
    'core/sync.d',
    'core/task.d',
    'core/taskpool.d',
    'internal/allocator.d',
    'internal/array.d',
    'internal/async.d',
    'internal/freelistref.d',
    'internal/interfaceproxy.d',
    'internal/list.d',
    'internal/string.d',
    'internal/traits.d',
    'internal/typetuple.d',
)

imports_dir = include_directories('..')
